Update GeminiClinet class